--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hashbrown = "0.14.3"
+log = { version = "0.4.20", features = ["std", "serde"] }
+nom = "7.1.3"
+serde = { version = "1.0.196", features = ["serde_derive"] }
+serde_json = "1.0.113"
+wson = { git = "https://github.com/blast-hardcheese/wson", branch = "expose-json-function" }
+
+[lib]
+crate-type = ["lib"]
